# mailtm-client-rs

./: Cargo.toml  README.md
src/: account_credentials.rs  client.rs  lib.rs
