[package]
name = "mailtm-client"
version = "0.1.1"
edition = "2021"
authors = ["Max Beier"]
description = "An asynchronous and simple client for Mail.tm."
readme = "README.md"
homepage = "https://maxbeier.dev"
repository = "https://github.com/Max-Beier/mailtm-client-rs"
license = "MIT"
license-file = "LICENSE"
keywords = ["mail"]

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
scraper = "0.19.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
